add "ENABLE_USER_REGISTRATION" for backend
